# crawlex

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  PLAN.md  README.md  SUBMODULES.md  build.rs  package.json  skills-lock.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  custom.css  index.html  infra-tier-operator.md  infra-tier-tcp.md
docs/adr/: 0001-jobrunner-value-return-outcome.md  0002-autofetcher-escalation-via-requeue.md  0003-detection-consolidation.md  0004-autofetcher-delete.md
docs/architecture/: 00-overview.md  01-crawl-pipeline.md  02-fetch-render-identity.md  03-queue-storage.md  04-events-hooks-sdk.md
docs/comparisons/: scrapling.md
docs/features/: README.md  discovery.md  proxy-stealth.md  storage-outputs.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: README.md  http-only.md  migrating-v1-to-v2.md  native-provider-validation.md  persistent-runs.md  rendered-sessions.md
docs/reference/: cli.md  config.md  events.md  mcp.md
docs/research/: evasion-gap-analysis.md
examples/: drogasil_amoxicilina.rs  embedded_with_hooks.rs  runner_crawl.rs  runner_smoke.rs
issues/: 10-slice.md  11-slice.md  12-slice.md  13-slice.md  14-slice.md  15-slice.md  16-slice.md  17-slice.md  18-slice.md  19-slice.md  2-slice.md  20-slice.md  21-slice.md  22-slice.md  23-slice.md  24-slice.md  25-slice.md  26-slice.md  27-slice.md  28-slice.md  29-slice.md  3-slice.md  30-slice.md  31-slice.md  32-slice.md  33-slice.md  34-slice.md  35-slice.md  36-slice.md  37-slice.md  4-slice.md  5-slice.md  6-slice.md  7-slice.md  8-slice.md  9-slice.md  prd-native-stealth-browser-providers.md  prd-v2-scraping-framework.md
issues/done/: 10-slice.md  11-slice.md  12-slice.md  13-slice.md  14-slice.md  15-slice.md  16-slice.md  17-slice.md  18-slice.md  19-slice.md  20-slice.md  21-slice.md  22-slice.md  23-slice.md  24-slice.md  25-slice.md  26-slice.md  27-slice.md  28-slice.md  29-slice.md  3-slice.md  30-slice.md  31-slice.md  32-slice.md  33-slice.md  34-slice.md  35-slice.md  36-slice.md  37-slice.md  4-slice.md  5-slice.md  6-slice.md  7-slice.md  9-slice.md
production-validation/: real_world_report.md  summary.md
research/: evasion-actionable-backlog.md  evasion-deep-dive.md
scripts/: check.sh  merge-ralph-worktree.sh  mine-fingerprints.mjs  raffel-proxy.mjs  ralph-orchestrator.sh  sync-tls-catalog.sh  sync-version.js  tls-canary.rs  yaml-from-capture.mjs
sdk/: crawlex-sdk.js  index.d.ts  postinstall.js  shell.js  version.js
sdk/test/: define-hooks.test.js  request.test.js  serialize-args.test.js  shell.test.js  spider.test.js
src/: cache_validator.rs  config.rs  crawl_stats.rs  crawler.rs  error.rs  escalation.rs  fallback_fetch.rs  from_curl.rs  lib.rs  metrics.rs  metrics_server.rs  robots.rs  scheduler.rs  status.rs  url_util.rs  wait_strategy.rs
src/adblock/: baseline.txt  mod.rs
src/antibot/: block_detector.rs  bypass.rs  cookie_pin.rs  mod.rs  signatures.rs  solver.rs  telemetry.rs
src/cli/: args.rs  command.rs  mod.rs  raffel_proxy.rs  render.rs
src/discovery/: asset_refs.rs  assets.rs  cert.rs  dns.rs  favicon.rs  graph.rs  js_endpoints.rs  links.rs  mod.rs  network_probe.rs  pipeline.rs  pwa.rs  robots_paths.rs  security_txt.rs  sitemap.rs  subdomains.rs  tech_fingerprint.rs  types.rs  wayback.rs  well_known.rs  whois.rs
src/events/: envelope.rs  mod.rs  sink.rs
src/extract/: html_clean.rs  link_filter.rs  mod.rs  pattern.rs  sitemap.rs
src/fingerprint/: coherence.rs  detection.rs  mod.rs  report.rs
src/frontier/: dedupe.rs  mod.rs  rate_limit.rs
src/hooks/: bridge.rs  context.rs  events.rs  lua.rs  mod.rs
src/http/: cookies.rs  mod.rs
src/identity/: bundle.rs  mod.rs  profiles.rs  session_registry.rs  validator.rs  warmup.rs
src/impersonate/: cookies.rs  decode.rs  dns_cache.rs  doh.rs  headers.rs  ja3.rs  mod.rs  pool.rs  profiles.rs  proxy_transport.rs  resource_hints.rs  tls.rs  tls_firefox.rs
src/intel/: mod.rs  orchestrator.rs  report_html.rs
src/mcp/: mod.rs
src/parser/: adaptive.rs  mod.rs  selectors.rs  similarity.rs
src/pattern/: mod.rs
src/policy/: action_policy.rs  engine.rs  mod.rs  profile.rs  reason.rs
src/proxy/: health.rs  list.rs  mod.rs  residential.rs  router.rs
src/queue/: inmemory.rs  mod.rs  sqlite.rs
src/render/: actions.rs  android_profile.rs  ax_snapshot.rs  calibration.rs  calibration_probe.js  cdp_capabilities.rs  cdp_probe.rs  handoff.rs  interact.rs  mod.rs  page_pool.rs  pool.rs  ref_resolver.rs  selector.rs  session.rs  spa_observer.rs  stealth.rs  stealth_shim.js  wait.rs
src/runner/: challenge.rs  extract.rs  fetcher.rs  mod.rs
src/scraping/: mod.rs  replay.rs  request.rs  session.rs  spider.rs
src/script/: executor.rs  legacy.rs  mod.rs  runner.rs  spec.rs
src/shell/: mod.rs
src/storage/: adaptive.rs  artifact.rs  challenge.rs  cursor.rs  filesystem.rs  intel.rs  memory.rs  mod.rs  sqlite.rs  (+2 more)
tests/: action_policy_wiring.rs  antibot_detection.rs  artifact_storage.rs  browser_launch_flags.rs  cache_freshness.rs  charset_ladder.rs  chrome_request_kind.rs  cli_args.rs  connection_coalescing.rs  cookie_pinning.rs  crawl_pattern_shape.rs  cursor_pagination.rs  dedupe.rs  doh_live.rs  e2e.rs  escalation.rs  events.rs  external_cdp_capabilities.rs  external_cdp_preflight.rs  fingerprint.rs  fpjs_compliance.rs  glob_pattern.rs  google_images_live.rs  h2_fingerprint_live.rs  html_clean.rs  identity_bundle.rs  identity_coherence.rs  infra_scaffold_interfaces.rs  job_ttl.rs  keyboard_bimodal.rs  link_filter.rs  live_news_navigation.rs  mini_http_only.rs  motion_device_profile.rs  motion_engine.rs  motion_idle.rs  motion_live.rs  motion_scroll.rs  motion_submovement.rs  native_provider_live.rs  (+44 more)
(+159 files in other folders)
